增加安全验证代码

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,7 @@ spring:
         reset-enable: true
         login-username: admin
         login-password: admin
+  security:
+    user:
+      name: admin
+      password: admin
