--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
   
      
     <dependencies>
-        <!-- <dependency>
+         <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-security</artifactId>
-         </dependency>-->
+         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -57,11 +57,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!--  <dependency>
-              <groupId>org.springframework.security</groupId>
-              <artifactId>spring-security-test</artifactId>
-              <scope>test</scope>
-          </dependency>-->
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -99,7 +94,21 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.11</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.11</version>
+        </dependency>
     </dependencies>
 
     <build>
