--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.11</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
