增加执行器的引入

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 <!--      注解校验参数-->
 <!--        <dependency>-->
 <!--            <groupId>org.hibernate</groupId>-->
