--- a/sys/admin/src/main/resources/application-prod.yml
+++ b/sys/admin/src/main/resources/application-prod.yml
@@ -28,7 +28,7 @@ wwl:
   # 获取ip地址开关
   addressEnabled: false
   # 验证码类型 math 数组计算 char 字符验证
-  captchaType: math
+  captchaType: char
   #版本号
   version: 1.0
   name: wwl后台管理
