--- a/sys/common/pom.xml
+++ b/sys/common/pom.xml
@@ -120,10 +120,10 @@
         </dependency>
 
         <!--hutool-->
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cn.hutool</groupId>-->
+<!--            <artifactId>hutool-all</artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
