--- a/sys/pom.xml
+++ b/sys/pom.xml
@@ -224,11 +224,11 @@
                 <version>${mybatis-plus.version}</version>
             </dependency>
             <!--hutool-->
-            <dependency>
-                <groupId>cn.hutool</groupId>
-                <artifactId>hutool-all</artifactId>
-                <version>${hutool.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>cn.hutool</groupId>-->
+<!--                <artifactId>hutool-all</artifactId>-->
+<!--                <version>${hutool.version}</version>-->
+<!--            </dependency>-->
             <!--weixin-java-common-->
             <dependency>
                 <groupId>com.github.binarywang</groupId>
