--- a/sys/framework/pom.xml
+++ b/sys/framework/pom.xml
@@ -72,10 +72,10 @@
         </dependency>
 
         <!--hutool-->
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cn.hutool</groupId>-->
+<!--            <artifactId>hutool-all</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
